# pkg/api/presenters/node_pool.go
@@ -100,7 +100,8 @@ func PresentNodePool(nodePool *api.NodePool) (openapi.NodePool, error) {
 	result := openapi.NodePool{
 		CreatedBy:   toEmail(nodePool.CreatedBy),
 		CreatedTime: nodePool.CreatedTime,
-		DeletedAt:   nodePool.DeletedAt,
+		DeletedBy:   toEmailPtr(nodePool.DeletedBy),
+		DeletedTime: nodePool.DeletedTime,
 		Generation:  nodePool.Generation,
 		Href:        &href,
 		Id:          &nodePool.ID,
